--- a/index.html
+++ b/index.html
@@ -23,8 +23,36 @@
                     id="animated-asset"
                     src="assets/asset.gltf"
                 ></a-asset-item>
+
+                <a-asset-item
+                    id="animated-asset01"
+                    src="assets/asset.gltf"
+                ></a-asset-item>
+
                 <video id="video" src="assets/Notification.mov" loop crossorigin="anonymous"> </video>
             </a-assets>
+
+            <!-- Marker -->
+
+            <!-- <a-marker
+                id="animated-marker"
+                type="pattern"
+                preset="custom"
+                src="assets/marker.patt"
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="markerA"
+            >
+                <a-entity
+                    id="bowser-model"
+                    scale="0.02953772861470976 0.02953772861470976 0.02953772861470976"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset"
+                    class="clickable"
+                    gesture-handler
+                ></a-entity>
+            </a-marker> -->
 
             <!-- Marker -->
 
@@ -42,7 +70,7 @@
                     id="bowser-model"
                     scale="0.02953772861470976 0.02953772861470976 0.02953772861470976"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="#animated-asset01"
                     class="clickable"
                     gesture-handler
                 ></a-entity>
