--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <a-asset-item
                     id="animated-asset01"
-                    src="assets/asset.gltf"
+                    src="assets/Gear1.gltf"
                 ></a-asset-item>
 
                 <video id="video" src="assets/Notification.mov" loop crossorigin="anonymous"> </video>
