--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     id="bowser-model"
                     scale="0.02953772861470976 0.02953772861470976 0.02953772861470976"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset01"
+                    gltf-model="#animated-asset"
                     class="clickable"
                     gesture-handler
                 ></a-entity>
