--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 id="video-asset"
                 type="pattern"
                 preset="custom"
-                src="assets/pattern-hiro.patt"
+                src="assets/marker.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
@@ -92,7 +92,7 @@
                     id="magnemite-model"
                     scale="0.03 0.03 0.03"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="#animated-asset01"
                     class="clickable"
                     gesture-handler
                 >
