--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
       >
       </a-entity>
 
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
-    <a-entity camera></a-entity>
-
-    <a-entity id="box" geometry="primitive: box; width: 0.1; height: 0.01; depth: 0.01;" material="color: blue;" position="0 0 -0.5"></a-entity>
-
-    <a-sphere color="blue" radius="0.1" position="50 150 -1"></a-sphere>
+    <a-entity id="box" geometry="primitive: box; width: 0.1; height: 0.01; depth: 0.01;" material="color: blue;" position="0 0 -3"></a-entity>
+    <a-sphere color="blue" radius="0.1" position="0 0 -3"></a-sphere>
 
     <a-cylinder
         position="1 0.75 -3"
