--- a/index.html
+++ b/index.html
@@ -66,15 +66,22 @@
 
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
-    <a-entity id="box" geometry="primitive: box; width: 0.1; height: 0.01; depth: 0.01;" material="color: blue;" position="0 0 -3"></a-entity>
-    <a-sphere color="blue" radius="0.1" position="0 0 -3"></a-sphere>
+    <a-cylinder position="0 0.75 -5" radius="0.1" height=".5" color="#FFC65D"></a-cylinder>
 
-    <a-cylinder
-        position="1 0.75 -3"
-        radius="0.5"
-        height="1.5"
-        color="#FFC65D"
-      ></a-cylinder>
+      <!-- AR MARKER -->
+      <a-marker id="marker" src="assets/marker.patt">
+
+        <a-box position='0 0.5 0' color="yellow"></a-box>
+        <a-box position='0 0.5 -2' color="yellow"></a-box>
+
+      </a-marker>
+
+      <!-- HIRO MARKER -->
+      <a-marker preset="hiro">
+        <a-entity src="assets/asset.gltf" scale="2 2 2" position="0 0 -.5"></a-entity>
+        <a-box position='0 0.5 -2' color="yellow"></a-box>
+      </a-marker>
+
 
   </a-scene>
 
