--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <a-scene vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;" embedded arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
     
     <!-- NFT MARKER -->
-    <a-nft type="nft" url="ARnmbq1/assets/Images/img" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
+    <a-nft type="nft" url="ARnmbq1/assets/qr-code/qr-code" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
       <a-box position='0 0 0' color="yellow"></a-box>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
     </a-nft>
@@ -57,12 +57,11 @@
     <!-- AR MARKER -->
     <a-marker id="marker" url="ARnmbq1/assets/marker.patt">
       <a-box position='0 0 0' color="yellow"></a-box>
-      <div id="tracked">Tracked</div>
     </a-marker>
 
     <!-- HIRO MARKER -->
     <a-marker preset="hiro">
-      <a-entity gltf-model="assets/magnemite/scene.gltf" scale="2 2 2" position="0 0 0"></a-entity>
+      <a-entity gltf-model="assets/Cube.gltf" position="0 0 0"></a-entity>
       <a-box position='0 0 0' color="yellow"></a-box>
     </a-marker>
 
