--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
       <a-box position='0 0 0' color="yellow"></a-box>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
     </a-nft>
-      
+
+    <!-- NFT MARKER DEMO -->
+    <a-nft type="nft" url="your-server/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
+      <a-entity gltf-model="your-server/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf" scale="5 5 5" position="150 300 -100"></a-entity>
+    </a-nft>
+
     <!-- AR MARKER -->
     <a-marker id="marker" url="ARnmbq1/assets/marker.patt">
       <a-box position='0 0 0' color="yellow"></a-box>
