--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- import aframe and then ar.js with image tracking / location based features -->
-<script src="js/aframe.min.js"></script>
+<script src="js/aframe-master.min.js"></script>
 <script src="js/aframe-ar-nft.js"></script>
 <!-- <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
