--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <!-- NFT MARKER DEMO -->
     <a-nft type="nft" url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
       <a-entity gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf" scale="5 5 5" position="150 300 -100"></a-entity>
+      <a-entity gltf-model="assets/Cube.gltf" scale="5 5 5" position="50 30 -10"></a-entity>
     </a-nft>
 
     <!-- AR MARKER -->
