--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     
     <!-- NFT MARKER -->
     <a-nft type="nft" url="ARnmbq1/assets/Images/qr-code/qr-code" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
+      <a-entity gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf" scale="5 5 5" position="150 300 -100"></a-entity>
       <a-box position='0 0 0' color="yellow"></a-box>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
     </a-nft>
 
     <!-- NFT MARKER DEMO -->
     <a-nft type="nft" url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
-      <a-entity gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf" scale="5 5 5" position="150 300 -100"></a-entity>
       <a-entity gltf-model="assets/Cube.gltf" scale="5 5 5" position="50 30 -10"></a-entity>
     </a-nft>
 
@@ -68,7 +68,7 @@
     <!-- HIRO MARKER -->
     <a-marker preset="hiro">
       <a-entity gltf-model="assets/Cube.gltf" position="0 0 0"></a-entity>
-      <a-box position='0 0 0' color="yellow"></a-box>
+      <a-box position='0 0 0' color="red"></a-box>
     </a-marker>
 
   <!-- CAMERA -->
