--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <a-box position='1 1 1' color="yellow"></a-box>
       <a-box position='-1 -1 -1' color="blue"></a-box>
       <a-cylinder position=".1 0.25 .-3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-entity gltf-model="assets/magnemite/scene.gltf" position="1 1 1" scale="7 7 7"></a-entity>
+      <a-entity gltf-model="assets/magnemite/scene.gltf" position="1 1 1" scale="7 7 7" rotation="90 0 0"></a-entity>
     </a-nft>
-    
+
     <!-- NFT MARKER VIRTUAL INFOPOINT -->
     <a-nft type="nft" url="ARnmbq1/assets/Images/img" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
       <a-entity gltf-model="assets/magnemite/scene.gltf" position="1 1 1" scale="7 7 7"></a-entity>
