--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
     
     <!-- NFT MARKER -->
     <a-nft type="nft" url="ARnmbq1/assets/Images/qr-code/qr-code" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
-      <a-entity gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf" scale="5 5 5" position="150 300 -100"></a-entity>
       <a-box position='0 0 0' color="blue"></a-box>
       <a-box position='1 1 1' color="yellow"></a-box>
       <a-box position='-1 -1 -1' color="blue"></a-box>
@@ -72,6 +71,7 @@
     <!-- NFT MARKER VIRTUAL INFOPOINT -->
     <a-nft type="nft" url="ARnmbq1/assets/Images/img" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
       <a-entity gltf-model="assets/magnemite/scene.gltf" position="1 1 1" scale="7 7 7"></a-entity>
+      <a-entity gltf-model="assets/magnemite/scene.gltf" position="0 0 0" scale="7 7 7"></a-entity>
       <a-box position='1 1 1' color="yellow"></a-box>
     </a-nft>
 
