--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
 
     <!-- NFT MARKER VIRTUAL INFOPOINT -->
     <a-nft type="nft" url="ARnmbq1/assets/Images/img" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
-      <a-entity gltf-model="assets/magnemite/scene.gltf" position="1 1 1" scale="7 7 7"></a-entity>
-      <a-entity gltf-model="assets/magnemite/scene.gltf" position="0 0 0" scale="7 7 7"></a-entity>
-      <a-image position="0 0 -5" src="assets/Images/marker (1).png"></a-image>
-      <a-box position='1 1 1' color="yellow"></a-box>
+      <a-entity gltf-model="assets/magnemite/scene.gltf" position="0 1 1" scale="7 7 7"></a-entity>
+      <a-image position="0 0 -5" src="assets/Images/marker (1).png" scale="7 7 7"></a-image>
+      <a-box position='1 1 1' color="yellow" scale="7 7 7"></a-box>
       <a-image ></a-image>
     </a-nft>
 
