--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
     <!-- NFT MARKER VIRTUAL INFOPOINT -->
     <a-nft type="nft" url="ARnmbq1/assets/Images/img" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
       <a-entity gltf-model="assets/magnemite/scene.gltf" position="0 1 -2" scale="7 7 7"></a-entity>
+      <a-entity gltf-model="assets/GLman.glb" position="0 1 -2" scale="7 7 7"></a-entity>
       <a-image position="0 0 -5" src="assets/Images/marker (1).png" scale="7 7 7"></a-image>
-      <a-box position='1 1 -2' color="yellow" scale="12 2 12"></a-box>
+      <a-box position='1 1 -2' color="yellow" scale="42 2 12"></a-box>
     </a-nft>
 
     <!-- AR MARKER -->
