--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       color: white;
       font-size: 24px;
       display: none; /* Start hidden */
+      background-color: rgba(0,0,0,0.8);
     }
   
 </style>
@@ -59,16 +60,6 @@
   <!-- a-frame scene -->
   <a-scene vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;" embedded arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
     
-    <!-- NFT MARKER -->
-    <a-nft type="nft" url="ARnmbq1/assets/Images/qr-code/qr-code" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
-      <a-box position='0 0 0' color="blue"></a-box>
-      <a-box position='1 1 1' color="yellow"></a-box>
-      <a-box position='-1 -1 -1' color="blue"></a-box>
-      <a-cylinder position=".1 0.25 .-3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-entity gltf-model="assets/magnemite/scene.gltf" position="1 1 1" scale="7 7 7" rotation="90 0 0"></a-entity>
-      <a-image position="0 0 -5" src="assets/Images/marker (1).png"></a-image>
-    </a-nft>
-
     <!-- NFT MARKER VIRTUAL INFOPOINT -->
     <a-nft type="nft" url="ARnmbq1/assets/Images/img" smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
       <a-entity gltf-model="assets/magnemite/scene.gltf" position="0 1 -2" scale="7 7 7"></a-entity>
@@ -84,7 +75,7 @@
 
     <!-- HIRO MARKER -->
     <a-marker preset="hiro">
-      <a-entity gltf-model="assets/Cube.gltf" position="0 0 0"></a-entity>
+      <a-entity gltf-model="assets/GLman.glb"></a-entity>
       <a-box position='0 0 0' color="red"></a-box>
     </a-marker>
 
