--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
       display: none; /* Start hidden */
       background-color: rgba(0,0,0,0.8);
     }
+    #interactionText {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 999;
+      color: white;
+      font-size: 44px;
+      display: none; /* Start hidden */
+      background-color: rgba(0,0,0,0.8);
+    }
   
 </style>
 
@@ -68,15 +79,10 @@
       <a-box position='1 1 -2' color="yellow" scale="42 2 12"></a-box>
     </a-nft>
 
-    <!-- AR MARKER -->
-    <a-marker id="marker" url="ARnmbq1/assets/marker.patt">
-      <a-box position='0 0 0' color="yellow"></a-box>
-    </a-marker>
-
     <!-- HIRO MARKER -->
-    <a-marker preset="hiro">
+    <a-marker id="hiro_marker" preset="hiro">
       <a-entity gltf-model="assets/GLman.glb"></a-entity>
-      <a-box position='0 0 0' color="red"></a-box>
+      <a-box id="hiro_box" position='0 0 0' color="red"></a-box>
     </a-marker>
 
   <!-- CAMERA -->
@@ -85,6 +91,8 @@
   </a-scene>
 
   <div id="centralText">Image tracked</div>
+
+  <div id="interactionText">Start Interaction</div>
 
   <script>
      window.addEventListener("arjs-nft-loaded", (event) => {
@@ -103,5 +111,14 @@
       // Wenn das NFT nicht mehr getrackt wird, verstecke das Div-Element
       document.getElementById('centralText').style.display = 'none';
     });
+
+    document.getElementById("hiro_box").addEventListener('touchstart', function() {
+      document.getElementById('interactionText').style.display = 'block';
+    });
+    
+    document.querySelector("hiro_marker").addEventListener('touchstart', function() {
+      document.getElementById('interactionText').style.display = 'block';
+    });
+
   </script>
 </body>
