--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!-- HIRO MARKER -->
     <a-marker id="hiro_marker" preset="hiro" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;">
-      <a-entity gltf-model="assets/GLman.glb"></a-entity>
+      <a-entity gltf-model="assets/magnemite/scene.gltf" position="0 0 0" scale="7 7 7"></a-entity>
       <a-box id="hiro_box" class="clickable" position='0 0 0' color="yellow" scale=".5 .5 .5"  cursor="rayOrigin: mouse" raycaster="objects: .box"></a-box>
     </a-marker>
 
