--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     function handleClick(){
       var videoElement = document.createElement('a-video');
-        videoElement.setAttribute('src', 'assests/Notification.mov'); // Passe die URL zum 360-Grad-Video an
+        videoElement.setAttribute('src', 'assets/Notification.mov'); // Passe die URL zum 360-Grad-Video an
         videoElement.setAttribute('position', '0 1 -2'); // Passe die Position des Videos an
         videoElement.setAttribute('autoplay', true); // Lasse das Video automatisch abspielen
         videoElement.setAttribute('loop', true); // Lasse das Video in einer Schleife wiederholen
